   - OVSDB:
     * 'relay' service model now supports transaction history, i.e. honors the
       'last-txn-id' field in 'monitor_cond_since' requests from clients.
     * New unixctl command 'ovsdb-server/tlog-set DB:TABLE on|off".
       If turned on, ovsdb-server will log (at level INFO and rate limited)
       all operations that are committed to table TABLE in the DB database.
   - OVSDB-IDL:
     * New monitor mode flag, OVSDB_IDL_WRITE_CHANGED_ONLY, allowing
       applications to relax atomicity requirements when dealing with
       columns whose value has been rewritten (but not changed).
   - OpenFlow:
     * Extended Flow Monitoring support for all supported OpenFlow versions:
         OpenFlow versions 1.0-1.2 with Nicira Extensions
         OpenFlow versions 1.3 with Open Network Foundation extension
         OpenFlow versions 1.4+, as defined in the OpenFlow specification
   - IPsec:
     * Added support for custom per-tunnel options via 'options:ipsec_*' knobs.
       See Documentation/tutorials/ipsec.rst for details.
   - Windows:
     * Conntrack support for TCPv6, UDPv6, ICMPv6, FTPv6.
     * IPv6 Geneve tunnel support.
   - DPDK:
     * OVS validated with DPDK 21.11.1.  It is recommended to use this version
       until further releases.
   - Userspace datapath:
     * 'dpif-netdev/subtable-lookup-prio-get' appctl command renamed to
       'dpif-netdev/subtable-lookup-info-get' to better reflect its purpose.
       The old variant is kept for backward compatibility.


v2.17.0 - 17 Feb 2022
---------------------
   - Userspace datapath:
     * Optimized flow lookups for datapath flows with simple match criteria.
       See 'Simple Match Lookup' in Documentation/topics/dpdk/bridge.rst.
     * New per-interface configuration knob 'other_config:tx-steering'.  If set
       to 'hash', enables hash-based Tx packet steering mode to utilize all the
       Tx queues of the interface regardles of the number of PMD threads.