@@ -14,4 +14,5 @@ usr/share/openvswitch/scripts/ovs-check-dead-ifs
 usr/share/openvswitch/scripts/ovs-ctl
 usr/share/openvswitch/scripts/ovs-kmod-ctl
 usr/share/openvswitch/scripts/ovs-save
+usr/share/openvswitch/local-config.ovsschema
 usr/share/openvswitch/vswitch.ovsschema
